criando logo temporaria

--- a/src/Pages/SignIn/signinStyles.css
+++ b/src/Pages/SignIn/signinStyles.css
@@ -10,3 +10,17 @@
   display: flex;
   flex-direction: row;
 }
+
+.container {
+  align-items: center;
+  justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  width: 70%;
+}
+
+@media screen and (max-width: 1000px) {
+  .container {
+    flex-direction: column;
+  }
+}
