--- a/src/Pages/SignIn/signinStyles.css
+++ b/src/Pages/SignIn/signinStyles.css
@@ -4,6 +4,7 @@
   height: 100vh;
   width: 100%;
   background: url("../../assets//layered-waves-haikei\ \(19\).svg") fixed center;
+  background-color: #1C1B20;
   background-size: cover;
   align-items: center;
   justify-content: space-around;
