--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ button {
 
 th, td {
   color: aliceblue;
+  padding: 3px;
 }
 
 thead {
@@ -45,6 +46,14 @@ thead {
   vertical-align: middle;
   border-color: inherit;
   background-color: #35286b;
+  font-size: 18px;
+  border-radius: 6px;
+}
+
+@media screen and (max-width: 900px){
+  thead {
+    font-size: 16px;
+  }
 }
 
 tr {
