--- a/src/Components/Logo/LogoSignIn.css
+++ b/src/Components/Logo/LogoSignIn.css
@@ -1,6 +1,16 @@
+
+.generalContainer {
+  display: flex;
+  margin-bottom: -100px;
+}
+
 .LogoContainer {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: -20px;
+  align-self: center;
+  margin-left: 40px;
 }
 
 h1 {
@@ -16,7 +26,7 @@ h1 {
 .Logo_2 {
   color: #1a1b25;
   font-size: 50px;
-  margin-top: -90px;
+  margin-top: -130px;
   background-color: #ffffff;
   padding: 10px;
   border-top-left-radius: 16px;
@@ -26,6 +36,5 @@ h1 {
 @media screen and (max-width: 1000px) {
   .LogoContainer {
     margin-bottom: -10px;
-    margin-top: -200px;
   }
 }
