--- a/src/Pages/SignIn/signinStyles.css
+++ b/src/Pages/SignIn/signinStyles.css
@@ -3,8 +3,8 @@
   box-sizing: border-box;
   height: 100vh;
   width: 100%;
-  /* background: url("../../assets/layered-waves-haikei\ \(19\).svg") fixed center; */
-  background-color: #1A1B25;
+  background: url("../../assets/layered-steps-haikei\ \(3\).svg") fixed center;
+  /* background-color: #1A1B25; */
   background-size: cover;
   align-items: center;
   justify-content: center;
