--- a/src/Pages/SignIn/signinStyles.css
+++ b/src/Pages/SignIn/signinStyles.css
@@ -16,7 +16,7 @@
 @media screen and (max-width: 1000px) {
   .signInContainer {
     height: 100vh;
-    background: url("../../assets/layered-steps-haikei\ \(5\).svg")  center;
+    background: url("../../assets/novo.svg")  center;
   } 
 }
 
